--- a/dog_vision.ipynb
+++ b/dog_vision.ipynb
@@ -16019,10 +16019,23 @@
         "%load_ext tensorboard"
       ],
       "metadata": {
-        "id": "Vz63-M5-nvaq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vz63-M5-nvaq",
+        "outputId": "9e262886-8316-4f70-a15c-a2e6e810a368"
       },
-      "execution_count": 63,
-      "outputs": []
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The tensorboard extension is already loaded. To reload it, use:\n",
+            "  %reload_ext tensorboard\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -16034,39 +16047,177 @@
         "  logdir = os.path.join('/content/drive/MyDrive/deepLearning-dog/logs',\n",
         "                        # Make it so the logs get tracked whenever we run an experiment\n",
         "                        datetime.datetime.now().strftime('%y%m%d-%H%M%S'))\n",
-        "  return tf.keras.callbacks.tensorboard(logdir)"
+        "  return tf.keras.callbacks.TensorBoard(logdir)"
       ],
       "metadata": {
         "id": "wGb0rznVrIt8"
       },
-      "execution_count": 65,
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Early Stopping Callback\n",
+        "\n",
+        "Early stopping helps stop our model from overfitting by stopping training if a certain evaluation metrics stops improving\n",
+        "https://www.tensorflow.org/api_docs/python/tf/keras/callbacks/EarlyStopping"
+      ],
+      "metadata": {
+        "id": "BNMskf28MWAL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create early stopping callback\n",
+        "early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_accuracy',\n",
+        "                                                  patience=3\n",
+        "                                                  )"
+      ],
+      "metadata": {
+        "id": "HaCpyuDjrIw2"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## training a model (on subset of data)\n",
+        "\n",
+        "Our fitest model is only going to train on 1000 images, to make sure everything is working."
+      ],
+      "metadata": {
+        "id": "fxxw_W1sol4k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "NUM_EPOCHS = 100#@param {type:'slider', min:10 , max:100 , step:10}"
+      ],
+      "metadata": {
+        "id": "8BvAl8-urI0C"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's create a function which trains a model.\n",
+        "\n",
+        "* create a model using `create_model()`\n",
+        "* Setup a TensorBoard callback using `careate_tensorboard_callback()`\n",
+        "* Call the `fit()` function on our model passing it the training data, validation data, number of epochs to train for(`NUM_EPOCHS`) and the callback functions that we'd like to use\n",
+        "* Return the model\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "g1tNfezWo_2k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Build a function to train and return a trained model\n",
+        "\n",
+        "def train_model():\n",
+        "  \"\"\"\n",
+        "Trains a given model and returns the trained version.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  # create a model\n",
+        "  model = create_model()\n",
+        "\n",
+        "  # create new Tensorboard session everytime we train a model\n",
+        "  newtensorboard = create_tensorboard_callback()\n",
+        "\n",
+        "  # fit the model to the data passing it the callbacks we created\n",
+        "  model.fit(x=train_data,\n",
+        "            epochs=NUM_EPOCHS,\n",
+        "            validation_data=val_data,\n",
+        "            validation_freq = 1,\n",
+        "            callbacks=[newtensorboard,early_stopping])\n",
+        "  \n",
+        "  return model"
+      ],
+      "metadata": {
+        "id": "QwyQmbmlpfii"
+      },
+      "execution_count": 70,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Early Stopping Callback"
+        "# fit the model to the data\n",
+        "model = train_model()"
       ],
       "metadata": {
-        "id": "BNMskf28MWAL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZhwusV7FqS2d",
+        "outputId": "0fcc75dd-3907-4c31-820a-3fde198e655f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "building model with:  https://tfhub.dev/google/imagenet/mobilenet_v2_130_224/classification/5\n",
+            "Epoch 1/100\n",
+            "25/25 [==============================] - 301s 12s/step - loss: 4.5060 - accuracy: 0.1050 - val_loss: 3.3855 - val_accuracy: 0.2850\n",
+            "Epoch 2/100\n",
+            "25/25 [==============================] - 4s 143ms/step - loss: 1.5798 - accuracy: 0.7113 - val_loss: 2.1689 - val_accuracy: 0.4900\n",
+            "Epoch 3/100\n",
+            "25/25 [==============================] - 3s 116ms/step - loss: 0.5428 - accuracy: 0.9488 - val_loss: 1.6857 - val_accuracy: 0.5800\n",
+            "Epoch 4/100\n",
+            "25/25 [==============================] - 4s 146ms/step - loss: 0.2425 - accuracy: 0.9887 - val_loss: 1.5062 - val_accuracy: 0.6100\n",
+            "Epoch 5/100\n",
+            "25/25 [==============================] - 6s 231ms/step - loss: 0.1376 - accuracy: 0.9987 - val_loss: 1.4361 - val_accuracy: 0.6400\n",
+            "Epoch 6/100\n",
+            "25/25 [==============================] - 3s 139ms/step - loss: 0.0957 - accuracy: 1.0000 - val_loss: 1.3855 - val_accuracy: 0.6500\n",
+            "Epoch 7/100\n",
+            "25/25 [==============================] - 3s 116ms/step - loss: 0.0723 - accuracy: 1.0000 - val_loss: 1.3552 - val_accuracy: 0.6600\n",
+            "Epoch 8/100\n",
+            "25/25 [==============================] - 3s 118ms/step - loss: 0.0580 - accuracy: 1.0000 - val_loss: 1.3373 - val_accuracy: 0.6600\n",
+            "Epoch 9/100\n",
+            "25/25 [==============================] - 4s 168ms/step - loss: 0.0477 - accuracy: 1.0000 - val_loss: 1.3109 - val_accuracy: 0.6650\n",
+            "Epoch 10/100\n",
+            "25/25 [==============================] - 3s 130ms/step - loss: 0.0403 - accuracy: 1.0000 - val_loss: 1.2999 - val_accuracy: 0.6700\n",
+            "Epoch 11/100\n",
+            "25/25 [==============================] - 3s 113ms/step - loss: 0.0348 - accuracy: 1.0000 - val_loss: 1.2870 - val_accuracy: 0.6750\n",
+            "Epoch 12/100\n",
+            "25/25 [==============================] - 3s 127ms/step - loss: 0.0303 - accuracy: 1.0000 - val_loss: 1.2758 - val_accuracy: 0.6750\n",
+            "Epoch 13/100\n",
+            "25/25 [==============================] - 5s 183ms/step - loss: 0.0269 - accuracy: 1.0000 - val_loss: 1.2651 - val_accuracy: 0.6900\n",
+            "Epoch 14/100\n",
+            "25/25 [==============================] - 3s 120ms/step - loss: 0.0239 - accuracy: 1.0000 - val_loss: 1.2575 - val_accuracy: 0.6800\n",
+            "Epoch 15/100\n",
+            "25/25 [==============================] - 3s 125ms/step - loss: 0.0215 - accuracy: 1.0000 - val_loss: 1.2515 - val_accuracy: 0.6900\n",
+            "Epoch 16/100\n",
+            "25/25 [==============================] - 4s 155ms/step - loss: 0.0195 - accuracy: 1.0000 - val_loss: 1.2443 - val_accuracy: 0.6950\n",
+            "Epoch 17/100\n",
+            "25/25 [==============================] - 3s 121ms/step - loss: 0.0177 - accuracy: 1.0000 - val_loss: 1.2415 - val_accuracy: 0.6950\n",
+            "Epoch 18/100\n",
+            "25/25 [==============================] - 3s 112ms/step - loss: 0.0162 - accuracy: 1.0000 - val_loss: 1.2351 - val_accuracy: 0.6900\n",
+            "Epoch 19/100\n",
+            "25/25 [==============================] - 4s 145ms/step - loss: 0.0150 - accuracy: 1.0000 - val_loss: 1.2319 - val_accuracy: 0.6900\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# %tensorboard --logdir /content/drive/MyDrive/deepLearning-dog/logs"
+      ],
       "metadata": {
-        "id": "HaCpyuDjrIw2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "8BvAl8-urI0C"
+        "id": "HB0oJt1rr-fk"
       },
       "execution_count": null,
       "outputs": []
